--- a/style.css
+++ b/style.css
@@ -75,13 +75,11 @@ body {
     text-transform: uppercase;
     color: white;
     background: var(--rosa);
-    box-shadow: 4px 4px 15px var(--rosa-chiaro);
     text-decoration: none;
     font-weight: 400;
     font-size: 16px;
     color: var(--bg-color)!important;
     padding: 20px 30px;
-    transition: .25s box-shadow;
 }
 
 .bottone:focus {
@@ -102,7 +100,6 @@ button {
     text-transform: uppercase;
     color: white;
     background: var(--rosa);
-    box-shadow: 4px 4px 15px var(--rosa-chiaro);
 }
 
 button:focus {
@@ -111,7 +108,7 @@ button:focus {
 
 button:hover {
     transition: .25s box-shadow;
-    box-shadow: 5px 6px 15px var(--rosa-chiaro-hover);
+    box-shadow: 5px 5px 20px var(--rosa-chiaro-hover);
 }
 
 h2 {
@@ -133,13 +130,24 @@ h2 {
 .contenuto-centrato p {
     margin-top: 20px;
 }
-
-.aggiorna-img {
+.immagini-basso {
     position: absolute;
-    bottom: 10px;
-    left: 60px;
-    width: 30vw;
+    bottom: 0px;
+    right: 0px;
     z-index: -1;
+    width: 40vw;
+}
+.immagini-basso-scroll {
+    position: relative;
+    bottom: 0px;
+    right: 0px;
+    z-index: -1;
+}
+.immagini-basso-scroll img {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  width: 40vw;
 }
 
 
@@ -198,11 +206,11 @@ header {
 #home-title {
     width: 40vw;
     position: absolute;
-    top: 35%;
+    top: 50%;
 }
 
 #home h1 {
-    margin-bottom: 30px;
+    margin-bottom: 60px;
     font-weight: 700;
     font-size: 7vw;
     line-height: 0.9em;
@@ -217,18 +225,26 @@ header {
     color: var(--font-color);
 }
 
-#home img {
+#home img:nth-of-type(1) {
     width: 40vw;
     position: absolute;
     top: 20%;
     right: 60px;
+    z-index: -1;
+}
+#home img:nth-of-type(2) {
+    width: 35vw;
+    position: absolute;
+    top: 20%;
+    left: -100px;
+    z-index: -1;
 }
 
 
 /* INIZIA  */
 
 #inizia h2 {
-    margin-bottom: 30px;
+    margin-bottom: 60px;
 }
 
 #inizia .bottone:first-of-type {
@@ -412,26 +428,16 @@ a:visited {
 /*BLOBS*/
 
 .gooey-rec {
-    background: linear-gradient(90deg, var(--blu-chiaro) 0%, var(--blu-chiaro) 100%);
+    background: linear-gradient(90deg, var(--grigio-chiaro) 0%, var(--grigio-chiaro) 100%);
     height: 400px;
     width: 400px;
     border-radius: 30% 70% 20% 40%;
     animation: transform 20s ease-in-out infinite both alternate, movement_one 40s ease-in-out infinite both;
     opacity: .5;
     position: absolute;
-    left: 75%;
+    left: 5%;
     top: -15%;
     z-index: -1;
-}
-
-.gooey-rec.one {
-    background: linear-gradient(90deg, #92FE9D 0%, #00C9FF 100%);
-    height: 1000px;
-    width: 1000px;
-    left: -500px;
-    top: -250px;
-    transform: rotate(-180deg);
-    animation: transform 30s ease-in-out infinite both alternate, movement_two 60s ease-in-out infinite both;
 }
 
 @keyframes transform {
@@ -478,7 +484,7 @@ a:visited {
 
 :root {
     --bg-color: #ffffff;
-    --grigio-chiaro: #ebebeb;
+    --grigio-chiaro: #f2f2f2;
     --grigio-scuro: #6b6b6b;
     --font-color: #000000;
     --blu: #4c3cff;
