--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@
     font-style: normal;
 }
 
+/* STILE GENERALE */
+
 html,
 body,
 a,
@@ -58,29 +60,59 @@ textarea {
     font-size: 16px;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
-    background-color: var(--bg-color);
-    color: var(--font-color);
+    background-color: var(--sfondo);
+    color: var(--testo);
     overflow-x: hidden;
 }
 
+h2 {
+    padding: 0 60px;
+    font-weight: 700;
+    font-size: 35px;
+    letter-spacing: -1px;
+    color: var(--blu);
+    text-align: center;
+}
 
-/* STILE GENERALE */
+h3 {
+  font-weight: 700;
+  font-size: 22px;
+  color: var(--testo-sec);
+  text-align: center;
+}
+
+h4 {
+  margin: 10px 0 0 0;
+  color: var(--testo-ter);
+  font-weight: 400;
+}
+
+a {
+    text-decoration: none;
+    color: var(--blu);
+}
+
+a:visited {
+    color: initial;
+}
 
 .bottone {
     width: 150px;
     height: 50px;
+    padding: 20px 30px;
+    background: var(--rosa);
     border: 0;
     border-radius: 50px;
+    font-size: 16px;
     font-weight: 400;
     text-transform: uppercase;
-    color: white;
-    background: var(--rosa);
     text-decoration: none;
-    font-weight: 400;
-    font-size: 16px;
-    color: var(--bg-color)!important;
-    padding: 20px 30px;
+    color: var(--sfondo) !important;
 }
 
 .bottone:focus {
@@ -89,7 +121,7 @@ body {
 
 .bottone:hover {
     transition: .25s box-shadow;
-    box-shadow: 5px 6px 15px var(--rosa-chiaro-hover);
+    box-shadow: 5px 6px 15px var(--rosa-sec);
 }
 
 button {
@@ -99,7 +131,7 @@ button {
     border-radius: 50px;
     font-weight: 400;
     text-transform: uppercase;
-    color: white;
+    color: var(--sfondo) !important;
     background: var(--rosa);
 }
 
@@ -109,67 +141,56 @@ button:focus {
 
 button:hover {
     transition: .25s box-shadow;
-    box-shadow: 5px 5px 20px var(--rosa-chiaro-hover);
+    box-shadow: 5px 5px 20px var(--rosa-sec);
 }
 
-h2 {
+.contenutoCentrato {
+    height: 70%;
+    margin: 0 auto;
+    padding: 0 60px;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.contenutoCentrato h2 {
+    height: auto;
+    margin-bottom: 20px;
+}
+
+.contenutoCentrato p {
+    width: 30%;
+    height: auto;
+    margin: 0;
+    text-align: center;
+    line-height: 2em;
+}
+
+.contenutoCentrato a {
+    color: var(--blu);
     font-weight: 700;
-    font-size: 35px;
-    letter-spacing: -1px;
-    color: var(--blu);
-    text-align: center;
 }
 
-.link {
-    color: var(--blu);
+.contenutoCentratoBottoni {
+    flex-direction: row;
+    margin-top: 30px;
 }
 
-.descrizioneaz {
-    font-size: 20px!important;
-    max-width: 350px;
-    margin-top: 15px;
-}
-
-.contenuto-centrato {
-    text-align: center;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-}
-
-.contenuto-centrato p {
-    margin-top: 20px;
-}
-
-.immagini-basso {
-    position: absolute;
-    bottom: 0px;
-    right: 0px;
-    z-index: -1;
-    width: 40vw;
-}
-
-.immagini-basso-scroll {
-    position: relative;
-    bottom: 0px;
-    right: 0px;
-    z-index: -1;
-}
-
-.immagini-basso-scroll img {
-    position: absolute;
-    bottom: 0px;
-    right: 0px;
-    width: 40vw;
+.contenutoCentrato .bottone:first-of-type {
+    margin-top: 30px;
+    margin-right: 30px;
 }
 
 
 /* HEADER */
 
 header {
-    margin: 60px 60px 0 60px;
+    padding: 60px 60px 0 60px;
     font-weight: 800;
     font-size: 25px;
     text-transform: uppercase;
@@ -237,42 +258,25 @@ header {
     text-decoration: none;
     font-weight: 400;
     font-size: 20px;
-    color: var(--font-color);
+    color: var(--testo);
 }
 
-#home img:nth-of-type(1) {
-    width: 40vw;
+#home-illustrazione {
+    width: 50vw;
     position: absolute;
-    top: 20%;
-    right: 60px;
+    top: 5vh;
+    right: 1vw;
     z-index: -1;
-}
-
-#home img:nth-of-type(2) {
-    width: 35vw;
-    position: absolute;
-    top: 20%;
-    left: -100px;
-    z-index: -1;
-}
-
-
-/* INIZIA  */
-
-#inizia h2 {
-    margin-bottom: 60px;
-}
-
-#inizia .bottone:first-of-type {
-    margin-right: 30px;
+    transform: scaleX(-1);
 }
 
 
 /* FORM */
 
 form {
-    margin: 60px auto;
-    width: 30vw;
+    margin: 0 auto;
+    padding: 60px 0;
+    max-width: 30vw;
 }
 
 label {
@@ -280,7 +284,7 @@ label {
     display: block;
     font-weight: 400;
     font-size: 22px;
-    color: var(--font-color);
+    color: var(--testo);
     text-align: left;
 }
 
@@ -296,10 +300,10 @@ textarea {
     width: 30vw;
     padding: 12px;
     margin-bottom: 40px;
-    border: 1px solid var(--grigio-chiaro);
+    border: 1px solid var(--sfondo-sec);
     border-radius: 5px;
     font-size: 16px;
-    color: var(--font-color);
+    color: var(--testo);
     background-color: transparent;
 }
 
@@ -324,148 +328,172 @@ textarea:focus {
     border-radius: 5px;
 }
 
-form>div {
+#formInvia {
     width: 100%;
     display: inline-flex;
     justify-content: space-between;
     align-items: center;
 }
 
-form>div>span {
-    color: var(--grigio-scuro);
+#formInvia span {
+    color: var(--testo-sec);
     font-style: italic;
 }
 
-button[type="submit"] {
+#formInvia button {
     cursor: pointer;
 }
 
+form select option {
+    color: black;
+}
 
 /* SCOPRI AZIENDE */
-
-a {
-    text-decoration: none;
+main {
+    margin: 0 auto;
+    padding: 60px 0;
 }
-
-a:visited {
-    color: initial;
-}
-
-.row_azienda {
-    margin: 60px auto;
+.scopriAzienda {
     width: 40vw;
+    margin: 60px auto;
     padding: 20px;
+    background: var(--sfondo);
     border-radius: 25px;
     transition: .35s;
-    cursor: pointer;
 }
 
-.row_azienda img {
+.scopriAzienda:hover {
+    box-shadow: 5px 8px 24px var(--sfondo-sec);
+}
+
+.scopriAzienda img {
     border-radius: 50%;
 }
 
-.row_azienda h3 {
-    display: inline;
-    vertical-align: top;
-    padding-left: 20px;
-    font-weight: bold;
-    font-size: 30px;
-    color: #3d3d3d;
-}
-
-.row_azienda h4 {
-    display: inline;
-    vertical-align: top;
-    padding-left: 20px;
-    color: #6b6b6b;
-    font-weight: 400;
-    margin-top: 10px;
-    margin-bottom: 15px;
-}
-
-.row_azienda h5 {
-    display: inline;
-    vertical-align: top;
-    padding-left: 20px;
-    margin-top: 10px;
-}
-
-.row_azienda div {
+.scopriAzienda div {
     display: inline-grid;
     vertical-align: top;
+    padding-left: 20px;
 }
 
-.hed {
-    color: #3d3d3d;
-    margin-right: 10px;
+.scopriAzienda h2 {
+    padding: 0;
+    display: inline;
+    vertical-align: top;
+    font-size: 30px;
+    text-align: left;
+    color: var(--testo-sec);
+}
+
+.scopriAzienda h3 {
+    display: inline;
+    vertical-align: top;
+    margin-top: 15px;
+}
+
+
+/* PAGINA PER AZIENDA SINGOLA */
+
+.aziendaScheda {
+    width: 50vw;
+    margin: 60px auto;
+    padding: 20px;
+    border-radius: 25px;
+    transition: .35s;
+    cursor: auto;
+    text-align: left;
+}
+
+.aziendaScheda img {
+    border-radius: 50%;
+}
+
+.aziendaScheda div {
+    display: inline-grid;
+    vertical-align: top;
+    padding-left: 20px;
+}
+
+.aziendaScheda h2 {
+    padding: 0;
+    display: inline;
+    vertical-align: top;
+    font-size: 40px;
+    text-align: left;
+}
+
+.aziendaScheda h3 {
+    display: inline;
+    vertical-align: top;
+    margin-top: 15px;
+}
+
+.aziendaScheda h4 {
+    display: inline;
+    vertical-align: top;
+}
+
+.aziendaTirociniTitolo {
+    width: 50vw;
+    margin: 0 auto;
+    cursor: auto;
+    text-align: left;
+
+}
+
+.aziendaTirocinio {
+    width: 50vw;
+    cursor: auto;
+    margin: 30px auto;
+    padding: 0;
+    text-align: left;
+    display: block;
+}
+
+.aziendaTirocinio h2 {
+    padding: 0;
+    display: inherit;
+    text-align: inherit;
+    vertical-align: top;
+    font-size: 24px;
+    color: var(--grigio-scuro);
+
+}
+
+.aziendaTirocinio h5 {
+    display: inherit;
+    text-align: inherit;
+}
+
+
+.scopriAzienda h5, .aziendaScheda h5, .aziendaTirocinio h5 {
+    margin: 10px 0 0 0;
+}
+
+.scopriAzienda div span:nth-of-type(1), .aziendaScheda div span:nth-of-type(1) {
+    font-weight: 500;
+    color: var(--testo);
+}
+
+.scopriAzienda div span:nth-of-type(2), .scopriAzienda div span:nth-of-type(4),
+.aziendaScheda div span:nth-of-type(2), .aziendaScheda div span:nth-of-type(4) {
+    margin-left: 10px;
+    color: var(--testo-sec);
+}
+
+.scopriAzienda div span:nth-of-type(3), .scopriAzienda div span:nth-of-type(5),
+.aziendaScheda div span:nth-of-type(3), .aziendaScheda div span:nth-of-type(5) {
+    font-weight: 500;
+    color: var(--blu);
+}
+
+.aziendaTirocinio span:nth-of-type(2), .aziendaTirocinio span:nth-of-type(4) {
     font-weight: 500;
 }
 
-.dsk {
+.aziendaTirocinio span:nth-of-type(3) {
     margin-left: 10px;
 }
-
-.nmb {
-    color: var(--blu);
-    font-weight: 500;
-}
-
-.row_azienda:hover {
-    box-shadow: 5px 8px 24px #6d6d6d2e;
-}
-
-.row_azienda.alt {
-    width: 50vw;
-    cursor: auto;
-}
-
-.row_azienda.alt h2 {
-    display: inline;
-    vertical-align: top;
-    padding-left: 20px;
-    font-weight: bold;
-    font-size: 40px;
-    color: #3d3d3d;
-    text-align: left;
-    color: var(--blu);
-}
-
-.row_azienda.alt:hover {
-    box-shadow: none;
-}
-
-.row_azienda.alt2 {
-    width: 50vw;
-    cursor: auto;
-    margin-bottom: 0px;
-    margin-top: 0px;
-    padding: 0;
-}
-
-.row_azienda.alt2 h2 {
-    display: inline;
-    vertical-align: top;
-    padding-left: 20px;
-    font-weight: bold;
-    font-size: 24px;
-    color: #3d3d3d;
-    text-align: left;
-}
-
-.row_azienda.alt2:hover {
-    box-shadow: none;
-}
-
-.titoloSezioneAzienda {
-    width: 50vw;
-    cursor: auto;
-    margin: 20px auto;
-    margin-bottom: 20px;
-    margin-top: 30px;
-    padding: 0px;
-    text-align: left;
-}
-
 
 /* INSERISCI RELAZIONI */
 
@@ -477,7 +505,7 @@ a:visited {
 /*BLOBS*/
 
 .gooey-rec {
-    background: linear-gradient(90deg, var(--grigio-chiaro) 0%, var(--grigio-chiaro) 100%);
+    background: linear-gradient(90deg, var(--sfondo-sec) 0%, var(--sfondo-sec) 100%);
     height: 400px;
     width: 400px;
     border-radius: 30% 70% 20% 40%;
@@ -529,40 +557,30 @@ a:visited {
 }
 
 
-/* LIGHT OR DARK MODE */
-
-:root {
-    --bg-color: #ffffff;
-    --grigio-chiaro: #f2f2f2;
-    --grigio-scuro: #6b6b6b;
-    --font-color: #000000;
-    --blu: #4c3cff;
-    --blu-chiaro: #959fff;
-    --rosa: #ff6584;
-    --rosa-chiaro: #ffabbc;
-    --rosa-chiaro-hover: #ff849d;
-}
-
-
-/*@media (prefers-color-scheme: dark) {
-  :root {
-    --bg-color: #000000;
-    --medium-color: #3e3e3e;
-    --font-color: #ffffff;
-    --blu: #4c3cff;
-    --blu-scuro: #2603c2;
-    --rosa: #ff6584;
-    --rosa-scuro: #e43f61;
-  }
-}
+/* TEMA CHIARO O SCURO */
 @media (prefers-color-scheme: light) {
   :root {
-    --bg-color: #ffffff;
-    --medium-color: #ebebeb;
-    --font-color: #000000;
+    --sfondo: #ffffff;
+    --sfondo-sec: #e6e6e6;
+    --testo: #000000;
+    --testo-sec: #3d3d3d;
+    --testo-ter: #6b6b6b;
     --blu: #4c3cff;
-    --blu-chiaro: #959fff;
+    --blu-sec: #959fff;
     --rosa: #ff6584;
-    --rosa-chiaro: #ffabbc;
+    --rosa-sec: #ffabbc;
   }
-}*/
+}
+@media (prefers-color-scheme: dark) {
+  :root {
+    --sfondo: #000000;
+    --sfondo-sec: #131313;
+    --testo: #ffffff;
+    --testo-sec: #e6e6e6;
+    --testo-ter: #c8c8c8;
+    --blu: #4c3cff;
+    --blu-sec: #766aff;
+    --rosa: #ff6584;
+    --rosa-sec: #6e0a1f;
+  }
+}
